--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,7 @@ llamaapi==0.1.36
 llmsherpa==0.1.4
 python_bcrypt==0.3.2
 transformers==4.39.3
+chainlit==1.0.500
+replicate==0.25.1
+sentence-transformers==2.6.1
+faiss-cpu==1.8.0
